temp changes, working on lecturer view

--- a/node_test_v1/views/studentCourse.ejs
+++ b/node_test_v1/views/studentCourse.ejs
@@ -179,7 +179,7 @@
                         </svg>
                       </a>
                       <% if (m.image_file) { %>
-                        <img src="Images/<%= m.image_file %>" alt="<%= m.module_title %>" class="w-full h-48 object-cover rounded-lg"/>
+                      <img src="Images/<%= courseId %>/<%= m.module_id %>.jpg" alt="<%= m.module_title %>" class="w-full h-48 object-cover rounded-lg"/>
                       <% } %>
                     </div>
                   </div>
